Grease Pencil sculpt mode is not active #75780

Closed
opened 2020-04-16 11:46:54 +02:00 by trim brimbo · 24 comments

System Information
Operating system: Linux-4.19.114-1-MANJARO-x86_64-with-arch-Manjaro-Linux 64 Bits
Graphics card: GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.82

Blender Version
Broken: version: 2.83 (sub 13), branch: master, commit date: 2020-04-15 21:34, hash: f0221ff667
Worked: 2.82a

Short description of error
Grease Pencil sculpt mode is not working. It doesn't even show the circle that we use for sculpting. I've been testing 2.83 Alpha version for the last two weeks and sculpt mode never worked.

Exact steps for others to reproduce the error

  • Launch Blender
  • New 2D Animation file
  • Select Draw mode
  • Draw
  • Select Sculpt Mode = No function.

Screenshot from 2020-04-16 10-38-38.png

Thanks!

**System Information** Operating system: Linux-4.19.114-1-MANJARO-x86_64-with-arch-Manjaro-Linux 64 Bits Graphics card: GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.82 **Blender Version** Broken: version: 2.83 (sub 13), branch: master, commit date: 2020-04-15 21:34, hash: `f0221ff667` Worked: 2.82a **Short description of error** Grease Pencil sculpt mode is not working. It doesn't even show the circle that we use for sculpting. I've been testing 2.83 Alpha version for the last two weeks and sculpt mode never worked. **Exact steps for others to reproduce the error** - Launch Blender - New 2D Animation file - Select Draw mode - Draw - Select Sculpt Mode = No function. ![Screenshot from 2020-04-16 10-38-38.png](https://archive.blender.org/developer/F8476690/Screenshot_from_2020-04-16_10-38-38.png) Thanks!
Author

Added subscriber: @tbrimbo

Added subscriber: @tbrimbo

Added subscriber: @antoniov

Added subscriber: @antoniov

I cannot replicate.

Can you try to reset the Sculpt brushes? Do you have the problem with new files, old files?

image.png

I cannot replicate. Can you try to reset the Sculpt brushes? Do you have the problem with new files, old files? ![image.png](https://archive.blender.org/developer/F8476702/image.png)

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

Can reproduce (under certain conditions -- still checking on this...), also seeing this:

Traceback (most recent call last):
  File "/scripts/startup/bl_ui/space_view3d.py", line 51, in draw
    self.draw_tool_settings(context)
  File "/scripts/startup/bl_ui/space_view3d.py", line 81, in draw_tool_settings
    is_valid_context = draw_fn(context, layout, tool)
  File "/scripts/startup/bl_ui/space_view3d.py", line 473, in SCULPT_GPENCIL
    brush_basic_gpencil_sculpt_settings(layout, context, brush, compact=True)
  File "/scripts/startup/bl_ui/properties_paint_common.py", line 1125, in brush_basic_gpencil_sculpt_settings
    sub.prop(gp_settings, "use_pressure", text="")
TypeError: UILayout.prop(): error with argument 1, "data" -  Function.data does not support a 'None' assignment AnyType type
Can reproduce (under certain conditions -- still checking on this...), also seeing this: ``` Traceback (most recent call last): File "/scripts/startup/bl_ui/space_view3d.py", line 51, in draw self.draw_tool_settings(context) File "/scripts/startup/bl_ui/space_view3d.py", line 81, in draw_tool_settings is_valid_context = draw_fn(context, layout, tool) File "/scripts/startup/bl_ui/space_view3d.py", line 473, in SCULPT_GPENCIL brush_basic_gpencil_sculpt_settings(layout, context, brush, compact=True) File "/scripts/startup/bl_ui/properties_paint_common.py", line 1125, in brush_basic_gpencil_sculpt_settings sub.prop(gp_settings, "use_pressure", text="") TypeError: UILayout.prop(): error with argument 1, "data" - Function.data does not support a 'None' assignment AnyType type ```
Member

Goes away here with Factory Settings, or when resetting Sculpt Brushes...

@antoniov : are you aware when this started? should there be versioning code?

Goes away here with `Factory Settings`, or when resetting Sculpt Brushes... @antoniov : are you aware when this started? should there be versioning code?

@lichtwerk In theory the patching is done... I'm going to recheck. The error you have is the missing Brush.

@lichtwerk In theory the patching is done... I'm going to recheck. The error you have is the missing Brush.

I cannot reproduce with the source code of today starting with --factory-startup or using the menu option Factory Settings

What I did was:

  1. Open default template or start blender with --factory-startup
  2. Add GPencil object Stroke or Blank Stroke and Draw something
  3. Go to Sculpt
I cannot reproduce with the source code of today starting with `--factory-startup` or using the menu option `Factory Settings` What I did was: 1) Open default template or start blender with `--factory-startup` 2) Add GPencil object Stroke or Blank Stroke and Draw something 3) Go to Sculpt
Author

Hi,

With new files, if I reset brushes, circle appears and I can sculpt.
If I save the file, the issue is resolved for the file but same issue occurs with any new file.
I tested old files. Only one of them shows the circle without needing to reset.
After resetting the brushes for an old file, if I save it, I can sculplt when I open again. However, when I first open the sculpt mode on a saved file, circle is missing while sculpt functions work. I have to go to draw mode and change it to sculpt mode again for the circle to appear.
If I don't save an old file, issue repeats.

Hi, With new files, if I reset brushes, circle appears and I can sculpt. If I save the file, the issue is resolved for the file but same issue occurs with any new file. I tested old files. Only one of them shows the circle without needing to reset. After resetting the brushes for an old file, if I save it, I can sculplt when I open again. However, when I first open the sculpt mode on a saved file, circle is missing while sculpt functions work. I have to go to draw mode and change it to sculpt mode again for the circle to appear. If I don't save an old file, issue repeats.

@tbrimbo There are different things here:

If you open an old file, it's logic you need save it to get all functionality. We have done a total refactor of the Sculpt brushes and when you save it all is reseted as it must be.

For the cursor (the circle), I'm not sure because this area is not only GPencil, but a more general cursor handlid.... just check that you have the cursor enabled:

image.png

When you say "new file"...how do you create the file? open default template and add a GPencil object or using 2D template?

@tbrimbo There are different things here: If you open an old file, it's logic you need save it to get all functionality. We have done a total refactor of the Sculpt brushes and when you save it all is reseted as it must be. For the cursor (the circle), I'm not sure because this area is not only GPencil, but a more general cursor handlid.... just check that you have the cursor enabled: ![image.png](https://archive.blender.org/developer/F8476750/image.png) When you say "new file"...how do you create the file? open default template and add a GPencil object or using 2D template?

I can reproduce from 2.82a... going to fix it.

I can reproduce from 2.82a... going to fix it.
Author
  • When I first started Blender I loaded factory settings and saved start up file, issue is now resolved for all new files.
  • It was happening with both 2D template and when I added new GPencil object.
  • Cursor is enabled. If I open the file while sculpt mode is enabled, it doesn't show the circle. I have to go to draw mode and back to sculpt mode to see the circle. This is a minor issue. At least I can use the sculpt mode again.
    Thank you for your time.
- When I first started Blender I loaded factory settings and saved start up file, issue is now resolved for all new files. - It was happening with both 2D template and when I added new GPencil object. - Cursor is enabled. If I open the file while sculpt mode is enabled, it doesn't show the circle. I have to go to draw mode and back to sculpt mode to see the circle. This is a minor issue. At least I can use the sculpt mode again. Thank you for your time.

@lichtwerk Can you check if this fix the problem with old files?

index d53b6cde4ae..74a4c58fd41 100644
    - a/source/blender/blenloader/intern/versioning_280.c
+++ b/source/blender/blenloader/intern/versioning_280.c
@@ -1666,6 +1666,19 @@ void do_versions_after_linking_280(Main *bmain, ReportList *UNUSED(reports))

LISTBASE_FOREACH (Object *, ob, &bmain->objects) {
BKE_fcurves_id_cb(&ob->id, do_version_fcurve_hide_viewport_fix, NULL);
}

+
+    /* Reset all grease pencil brushes. */
+    LISTBASE_FOREACH (Scene *, scene, &bmain->scenes) {
+      BKE_brush_gpencil_paint_presets(bmain, scene->toolsettings);
+      BKE_brush_gpencil_sculpt_presets(bmain, scene->toolsettings);
+      BKE_brush_gpencil_weight_presets(bmain, scene->toolsettings);
+      BKE_brush_gpencil_vertex_presets(bmain, scene->toolsettings);
+
+      /* Ensure new Paint modes. */
+      BKE_paint_ensure_from_paintmode(scene, PAINT_MODE_VERTEX_GPENCIL);
+      BKE_paint_ensure_from_paintmode(scene, PAINT_MODE_SCULPT_GPENCIL);
+      BKE_paint_ensure_from_paintmode(scene, PAINT_MODE_WEIGHT_GPENCIL);
+    }

}

 

/**

@lichtwerk Can you check if this fix the problem with old files? ```diff --git a/source/blender/blenloader/intern/versioning_280.c b/source/blender/blenloader/intern/versioning_280.c index d53b6cde4ae..74a4c58fd41 100644 - a/source/blender/blenloader/intern/versioning_280.c +++ b/source/blender/blenloader/intern/versioning_280.c @@ -1666,6 +1666,19 @@ void do_versions_after_linking_280(Main *bmain, ReportList *UNUSED(reports)) ``` LISTBASE_FOREACH (Object *, ob, &bmain->objects) { BKE_fcurves_id_cb(&ob->id, do_version_fcurve_hide_viewport_fix, NULL); } ``` + + /* Reset all grease pencil brushes. */ + LISTBASE_FOREACH (Scene *, scene, &bmain->scenes) { + BKE_brush_gpencil_paint_presets(bmain, scene->toolsettings); + BKE_brush_gpencil_sculpt_presets(bmain, scene->toolsettings); + BKE_brush_gpencil_weight_presets(bmain, scene->toolsettings); + BKE_brush_gpencil_vertex_presets(bmain, scene->toolsettings); + + /* Ensure new Paint modes. */ + BKE_paint_ensure_from_paintmode(scene, PAINT_MODE_VERTEX_GPENCIL); + BKE_paint_ensure_from_paintmode(scene, PAINT_MODE_SCULPT_GPENCIL); + BKE_paint_ensure_from_paintmode(scene, PAINT_MODE_WEIGHT_GPENCIL); + } ``` } ``` ``` /** ```
Member

In #75780#911170, @antoniov wrote:
@lichtwerk Can you check if this fix the problem with old files?

Fixes it for me, yes

> In #75780#911170, @antoniov wrote: > @lichtwerk Can you check if this fix the problem with old files? Fixes it for me, yes

This issue was referenced by a9dd6d004b

This issue was referenced by a9dd6d004b4f6798e62618dd6cf87369509b33a6

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Antonio Vazquez self-assigned this 2020-04-16 15:57:25 +02:00

Added subscriber: @Pineapple

Added subscriber: @Pineapple

I just downloaded 2.83 and only a handful of the sculpt tools work now. Any idea what I can do?

I just downloaded 2.83 and only a handful of the sculpt tools work now. Any idea what I can do?

@Pineapple Did you test with 2D template? and with factory settings?

@Pineapple Did you test with 2D template? and with factory settings?

Added subscriber: @lemairecarl

Added subscriber: @lemairecarl

Hi, I'm having a similar issue. At some point, a GP tool stops working. I'm not sure how that happens, but it happened to me 3 times in just a few hours of using Blender 2.83 (it happens with files created in the same version). Fortunately, resetting the brushes does fix the problem.

It has happened to me with the Push tool and the Strength tool. Here is a file that has the problem with the Strength tool: chat_bug2.blend

There are multiple symptoms when trying to use the tool:

  • The cursor does not appear
  • Clicking and dragging in the viewport does nothing
  • In the tool settings (?), above the viewport, there is only a radius setting available.
  • In the status bar, instead of saying "Stroke Sculpt" for the LMB, it says "Select"
  • When clicking on the X-ray button in the top-right of the viewport, a blank error message appears.

You can see all these symptoms in this video:

blender-bug.mov

Hi, I'm having a similar issue. At some point, a GP tool stops working. I'm not sure how that happens, but it happened to me 3 times in just a few hours of using Blender 2.83 (it happens with files created in the same version). Fortunately, resetting the brushes does fix the problem. It has happened to me with the Push tool and the Strength tool. Here is a file that has the problem with the Strength tool: [chat_bug2.blend](https://archive.blender.org/developer/F8695009/chat_bug2.blend) There are multiple symptoms when trying to use the tool: - The cursor does not appear - Clicking and dragging in the viewport does nothing - In the tool settings (?), above the viewport, there is only a radius setting available. - In the status bar, instead of saying "Stroke Sculpt" for the LMB, it says "Select" - When clicking on the X-ray button in the top-right of the viewport, a blank error message appears. You can see all these symptoms in this video: [blender-bug.mov](https://archive.blender.org/developer/F8695012/blender-bug.mov)

Closed as duplicate of #79003

Closed as duplicate of #79003
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75780
No description provided.