Fix T75780: Gpencil Sculpt brushes not working with old files

The patching of brushes was not done.